# pygraph

./: LICENSE  README.md
src/: setup.py  test_graph_solver.py
src/cpp/: CMakeLists.txt
src/cpp/nl-lmp/: solve-joint.hxx
src/cpp/pygraph/: CMakeLists.txt  pygraph.cpp  pygraph.h  pygraph.i  pygraphSWIG.i
src/pygraph/: __init__.py
src/tests/: test-graph-solution.py  test-graph-solver.py  test_graph_solver.py
